<resources>
    <string name="app_name">Bangalore Home Price Predictor</string>
    <string name="home_option">Home</string>
    <string name="predictor_option">Predictor</string>
    <string name="saved_predictions_option">Saved Predictions</string>
    <string name="about_app_option">About App</string>
    <string name="profile_option">Profile</string>
    <string name="logout_option">Logout</string>
    <string name="delete_account_option">Delete Account</string>
    <string name="change_password_option">Forgot Password</string>
    <string name="open">open</string>
    <string name="close">open</string>
    <string name="loading_dialog">Loading.....</string>
    <string name="about_app">Bangalore Home Price Predictor Is An Android Application, Which Used The Machine Learning Model To Predicts The Bangalore Home Prices Based On Location, BHKs, Bathrooms, Balconies &amp; Square-foot-area.

    </string>
    <string name="square_foot_area">Square Foot Area:</string>
    <string name="square_foot_area_edit_text">Square Foot Area</string>
    <string name="location">Location:</string>
    <string name="bhk">BHK:</string>
    <string name="bath">Bath:</string>
    <string name="balcony">Balcony:</string>
    <string name="estimate_price">Estimate Price</string>
    <string name="id">ID:</string>
    <string name="sqft_area_saved">Sqft Area:</string>
    <string name="bhk_saved">BHK:</string>
    <string name="location_saved">Location:</string>
    <string name="baths_saved">Baths:</string>
    <string name="balconies_saved">Balconies:</string>
    <string name="emailHint">Email Address</string>
    <string name="passwordHint">Password</string>
    <string name="loginButton">Login</string>
    <string name="createAccountButton">Create An Account</string>
    <string name="signupbutton">Create An Account</string>
    <string name="alreadyAccountButton">Already Have An Account ?</string>
    <string name="signout_option">Sign Out</string>
    <string name="loading_locations">Locations.....</string>
    <string name="no_data_available">No Data Available!</string>
    <string name="predicting_result">Predicting Prices.....</string>

    <string-array name="bhk_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string-array name="bath_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string-array name="balcony_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
</resources>