<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/square_foot_area"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-condensed-medium">
                </TextView>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sqft"
                    android:hint="@string/square_foot_area_edit_text"
                    android:background="@drawable/textbox"
                    android:textSize="18sp"
                    android:layout_margin="8dp"
                    android:padding="12dp"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:inputType="number">
                </EditText>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-condensed-medium">

                </TextView>

                <Spinner
                    android:id="@+id/location_names"
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog"
                    android:background="@android:drawable/btn_dropdown">

                </Spinner>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bhk"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-condensed-medium">

                </TextView>

                <Spinner
                    android:id="@+id/bhk"
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog"
                    android:background="@android:drawable/btn_dropdown">

                </Spinner>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bath"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-condensed-medium">

                </TextView>

                <Spinner
                    android:id="@+id/bath"
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog"
                    android:background="@android:drawable/btn_dropdown">

                </Spinner>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/balcony"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-condensed-medium">

                </TextView>

                <Spinner
                    android:id="@+id/balcony"
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog"
                    android:background="@android:drawable/btn_dropdown">

                </Spinner>


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:textColor="@color/white"
                    android:text="@string/estimate_price"
                    android:background="@drawable/button_style"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/estimate_price_btn"
                    android:textSize="18sp">
                </Button>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>